# reter_code

./: .gitignore  CADSL_GRAMMAR_GAP_ANALYSIS.md  CADSL_MULTIOUTPUT_DESIGN.md  CADSL_TOOL_COMPARISONS.md  LICENSE  README.md  dev  pyproject.toml  run_server.py
docs/: CADSL_DESIGN.md  README.md  architecture.md  tools-overview.md  tools.md
docs/tools/: session.md  thinking.md
resources/: AI_AGENT_USAGE_GUIDE.md  GRAMMAR_REFERENCE.md  PLUGIN_SYSTEM_GUIDE.md  PYTHON_QUERY_PATTERNS.md  PYTHON_TOOLS_REFERENCE.md  RECOMMENDATIONS_PLUGIN_GUIDE.md  REQL_GRAMMAR.lark  RESOURCE_INDEX.md  SESSION_CONTEXT_GUIDE.md  SYNTAX_QUICK_REFERENCE.md  oo_ontology.reol  oo_ontology.reol.old
resources/cpp/: cpp_ontology.reol
resources/csharp/: cs_ontology.reol  cs_ontology.reol.old
resources/examples/: reter.json
resources/javascript/: JS_ANALYSIS_REFERENCE.md  js_ontology.reol
resources/python/: py_ontology.reol
resources/system/: AUTOMATIC_SNAPSHOTS.md  DEFAULT_INSTANCE.md  MULTIPLE_INSTANCES.md  SOURCE_MANAGEMENT.md  THREAD_SAFETY.md
src/codeine/: __init__.py  __main__.py  logging_config.py  models.py  reter_wrapper.py  server.py
src/codeine/cadsl/: __init__.py  compiler.py  grammar.lark  loader.py  parser.py  test_equivalence.py  test_loader.py  test_parser.py  test_transformer.py  tools_bridge.py  transformer.py
src/codeine/dsl/: METRICS_ANALYSIS.md  __init__.py  arrow_pipeline.py  core.py  decorators.py  operators.py  registry.py
src/codeine/resources/: AI_AGENT_USAGE_GUIDE.md  CADSL_SYSTEM.prompt  REQL_SYSTEM.prompt  RESOURCE_INDEX.md  SESSION_CONTEXT_GUIDE.md  oo_ontology.cnl  oo_ontology.reol
src/codeine/services/: __init__.py  agent_sdk_client.py  config_loader.py  content_extractor.py  default_instance_manager.py  documentation_provider.py  embedding_service.py  faiss_wrapper.py  gitignore_parser.py  hybrid_query_engine.py  initialization_progress.py  instance_manager.py  language_support.py  nlq_constants.py  nlq_helpers.py  rag_index_manager.py  response_truncation.py  reter_operations.py  state_persistence.py  tool_registrar.py
src/codeine/tools/: base.py  dataclasses.py
src/reter_code/: __init__.py  __main__.py  _server_entry.py  logging_config.py  mcp_server.py  models.py  reter_exceptions.py  reter_loaders.py  reter_utils.py  reter_wrapper.py  server.py
src/reter_code/cadsl/: __init__.py  builtins.py  compiler.py  grammar.lark  loader.py  parser.py  python_executor.py  test_equivalence.py  test_loader.py  test_parser.py  test_security.py  test_transformer.py  tools_bridge.py  transformer.py  utils.py  validator.py
src/reter_code/dsl/: METRICS_ANALYSIS.md  arrow_pipeline.py  catpy.py  core.py  decorators.py  operators.py  registry.py
src/reter_code/mermaid/: __init__.py  markdown_grammar.lark  markdown_validator.py  mermaid_validator.lark  validator.py
src/reter_code/resources/: CADSL_GRAMMAR.lark  CADSL_SYSTEM.prompt  CUSTOM_KNOWLEDGE_GUIDE.md  GRAMMAR_REFERENCE.md  HYBRID_CLASSIFICATION.prompt  PYTHON_QUERY_PATTERNS.md  REQL_GRAMMAR.lark  REQL_SYNTAX_HELP.prompt  REQL_SYSTEM.prompt  RESOURCE_INDEX.md  code_ontology.cnl  erlang_ontology.cnl  go_ontology.cnl  haskell_ontology.cnl  java_ontology.cnl  objc_ontology.cnl  oo_ontology.cnl  php_ontology.cnl  py_ontology.cnl  rust_ontology.cnl  scala_ontology.cnl  swift_ontology.cnl  vb6_ontology.cnl
src/reter_code/server/: __init__.py  __main__.py  config.py  console_ui.py  protocol.py  reter_client.py  reter_server.py  view_server.py
tests/: conftest.py  test_cadsl_parse_write.py  test_dsl.py  test_dsl_standalone.py  test_markdown_validator.py  test_mermaid_validator.py  test_oo_subsumption.py  test_operations_handler.py  test_rag_components.py  test_rag_integration.py  test_refactoring_integration.py  test_reter_wrapper.py  test_sqlite_session_store.py  test_test_coverage.py  test_thinking_session.py  test_unified_store.py
tests/dsl/: test_integration_with_real_data.py
(+437 files in other folders)
