[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reter_code"
version = "0.1.8"
description = "Reter Code - AI-powered code reasoning MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Reter.AI", email = "contact@reter.ai"}
]
keywords = ["mcp", "reasoning", "code-analysis", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=2.0.0",
    "reter @ git+https://github.com/reter-ai/reter.git",
    "numpy<2; python_version<'3.13'",
    "pyarrow>=10.0.0",
    "lark>=1.1.0",
    "pydantic>=2.0.0",
    "sentence-transformers>=2.0.0",
    "transformers<4.48",
    "faiss-cpu>=1.7.0",
    "anthropic>=0.30.0",
    "claude-agent-sdk>=0.1.20",
    "watchdog>=3.0.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "inline-snapshot>=0.6.0",
    "dirty-equals>=0.6.0",
]

[project.scripts]
reter = "reter_code._server_entry:main"
reter_code = "reter_code:main"

[project.urls]
Homepage = "https://github.com/reter-ai/reter_code"
Documentation = "https://github.com/reter-ai/reter_code#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reter_code = [
    "resources/*",
    "resources/**/*",
    "cadsl/tools/**/*.cadsl",
    "cadsl/*.lark",
    "server/view/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
